--- a/prompts/prompt.yaml
+++ b/prompts/prompt.yaml
@@ -1,3 +1,3 @@
 # prompts/agent.yaml
 user_goal: |
-  "Give a description of what an average life of a neolithic human-ancestors."
+  "Write a story about a car chase that involves an oil change. Please include a witch. Please search for inspiration"
