Improve workflow tools and update prompts
Improve workflow tools and update prompts

- Refactored `workflow_tools.py` to enhance modularity, readability, and maintainability.
- Introduced helper functions for configuration loading and directory management.
- Centralized file paths using `Pathlib` for consistency.
- Updated prompt in `prompt.yaml` with a new theme.
- Adjusted relative imports for better structure alignment.
- Improved type validation in argument normalization.

Signed-off-by: Ian Pommer <9175791+Pan-I@users.noreply.github.com>

--- a/prompts/prompt.yaml
+++ b/prompts/prompt.yaml
@@ -1,3 +1,3 @@
 # prompts/agent.yaml
 user_goal: |
-  "Write a story about a car chase that involves an oil change. Please include a witch. Please search for inspiration"
+  "Write a story about a snail going on an adventure to the moon. Please include a bears, pizza, or a paradox. Please search for inspiration."
