Integrate form generation tool and add corresponding tests
- Added `generate_ui_form` function in `form_tools.py` for dynamic HTML form creation.
- Integrated the tool into the agent and updated the prompt definition in `tools.yaml`.
- Added comprehensive tests for `form_tools.py` and agent integration to validate functionality.

--- a/prompts/tools.yaml
+++ b/prompts/tools.yaml
@@ -13,3 +13,8 @@ search:
     top_k: int
   defaults:
     top_k: 5
+generate_ui_form:
+  fn: form_tools.generate_ui_form
+  description: "Generate an HTML form based on a list of field specifications. Each field should be a dictionary with 'name', 'label', and 'type'."
+  schema:
+    fields: list
